--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ jobs:
     script:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
     - docker run --rm --privileged multiarch/qemu-user-static:register
-    - env GOOS=linux GOARCH=amd64 go build -o test-web-server-amd64
-    - env GOOS=linux GOARCH=arm go build -o test-web-server-arm
-    - env GOOS=linux GOARCH=arm64 go build -o test-web-server-arm64
+    - env GOOS=linux GOARCH=amd64 go build -o test-web-server-amd64 cmd/server/main.go
+    - env GOOS=linux GOARCH=arm go build -o test-web-server-arm cmd/server/main.go
+    - env GOOS=linux GOARCH=arm64 go build -o test-web-server-arm64 cmd/server/main.go
     - docker build --build-arg ARCH=amd64 -t $DOCKER_USERNAME/bikebike-touring-trackerr:${TRAVIS_TAG}-linux-amd64 -f
       ./Dockerfile .
     - docker build --build-arg ARCH=arm64 -t $DOCKER_USERNAME/test-web-server:${TRAVIS_TAG}-linux-arm -f
