--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,16 @@ stages:
   - build-push
   - manifest
 
-env:
-  matrix:
-    - ARCH=amd64
-    - ARCH=arm64
-    - ARCH=arm
-
 jobs:
   include:
+    - stage: test
+      env:
+      script:
+        - go get golang.org/x/lint/golint
+        - golint
+
     - stage: build-push
+      env: ARCH=amd64
       services: docker
       script:
         - TRAVIS_TAG="1.0.0"
@@ -24,11 +25,27 @@ jobs:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH}
 
-    - stage: test
-      env:
+    - stage: build-push
+      env: ARCH=arm64
+      services: docker
       script:
-        - go get golang.org/x/lint/golint
-        - golint
+        - TRAVIS_TAG="1.0.0"
+        - docker run --rm --privileged multiarch/qemu-user-static:register
+        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-amd64 cmd/server/main.go
+        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH} .
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH}
+
+    - stage: build-push
+      env: ARCH=arm
+      services: docker
+      script:
+        - TRAVIS_TAG="1.0.0"
+        - docker run --rm --privileged multiarch/qemu-user-static:register
+        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-amd64 cmd/server/main.go
+        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH} .
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH}
 
     - stage: manifest
       env:
