--- a/.travis.yml
+++ b/.travis.yml
@@ -18,42 +18,38 @@ jobs:
       env: ARCH=amd64
       services: docker
       script:
-        - TRAVIS_TAG="1.0.0"
         - docker run --rm --privileged multiarch/qemu-user-static:register
-        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-amd64 cmd/server/main.go
-        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH} .
+        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-${ARCH} cmd/server/main.go
+        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_BRANCH}-linux-${ARCH} .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH}
+        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_BRANCH}-linux-${ARCH}
 
     - stage: build-push
       env: ARCH=arm64
       services: docker
       script:
-        - TRAVIS_TAG="1.0.0"
         - docker run --rm --privileged multiarch/qemu-user-static:register
-        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-amd64 cmd/server/main.go
-        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH} .
+        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-${ARCH} cmd/server/main.go
+        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_BRANCH}-linux-${ARCH} .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH}
+        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_BRANCH}-linux-${ARCH}
 
     - stage: build-push
       env: ARCH=arm
       services: docker
       script:
-        - TRAVIS_TAG="1.0.0"
         - docker run --rm --privileged multiarch/qemu-user-static:register
-        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-amd64 cmd/server/main.go
-        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH} .
+        - env GOOS=linux GOARCH=${ARCH} go build -o bike-touring-tracker-${ARCH} cmd/server/main.go
+        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_BRANCH}-linux-${ARCH} .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_TAG}-linux-${ARCH}
+        - docker push $DOCKER_USERNAME/bike-touring-tracker:${TRAVIS_BRANCH}-linux-${ARCH}
 
     - stage: manifest
       env:
       script:
-        - TRAVIS_TAG="1.0.0"
         - wget https://github.com/estesp/manifest-tool/releases/download/v0.9.0/manifest-tool-linux-amd64
         - mv manifest-tool-linux-amd64 manifest-tool
         - chmod +x manifest-tool
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - ./manifest-tool push from-args --platforms linux/amd64,linux/arm,linux/arm64
-          --template "phillebaba/bike-touring-tracker:${TRAVIS_TAG}-OS-ARCH" --target "phillebaba/bike-touring-tracker:${TRAVIS_TAG}"
+          --template "phillebaba/bike-touring-tracker:${TRAVIS_BRANCH}-OS-ARCH" --target "phillebaba/bike-touring-tracker:${TRAVIS_BRANCH}"
