--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Packr
+**/packrd
+*-packr.go
 
 # Created by https://www.gitignore.io/api/go
 # Edit at https://www.gitignore.io/?templates=go
@@ -24,4 +27,3 @@
 /Godeps/
 
 # End of https://www.gitignore.io/api/go
-n
