--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,6 +42,10 @@
   version = "1.4.0"
 
 [[constraint]]
+  name = "github.com/gobuffalo/packr"
+  version = "2.5.2"
+
+[[constraint]]
   branch = "master"
   name = "github.com/golang/geo"
 
@@ -60,10 +64,6 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.3.0"
-
-[[constraint]]
-  name = "github.com/thinkerou/favicon"
-  version = "0.1.0"
 
 [prune]
   go-tests = true
