--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bike-tour-tracker-service
+  name: btt-service
 spec:
   selector:
-    app: bike-tour-tracker
+    app: bike-touring-tracker
   ports:
-  - port: 80
-    protocol: TCP
+  - protocol: TCP
+    port: 80
     targetPort: 80
 ---
 apiVersion: v1
@@ -18,8 +18,9 @@ metadata:
   labels:
     app: postgres
 spec:
-  type: ClusterIP
   ports:
-    - port: 5432
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
   selector:
     app: postgres
