Update kubernetes manifests

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -20,10 +20,23 @@ spec:
         image: phillebaba/bike-touring-tracker:master
         imagePullPolicy: Always
         command: ["/bin/bike-touring-tracker"]
-        args: ["-postgres-host", "postgres.btt.svc.cluster.local"]
+        args:
+          - "-postgres-host=$(POSTGRES_SERVICE)"
+          - "-postgres-password=$(DB_PASSWORD)"
+          - "-admin-password=$(ADMIN_PASSWORD)"
         env:
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: db-secret
+              key: db-password
+        - name: ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: btt-secret
+              key: admin-password
         - name: GIN_MODE
-          value: "debug"
+          value: "release"
         - name: PORT
           value: "80"
         ports:
