--- a/.travis.yml
+++ b/.travis.yml
@@ -1,67 +1,17 @@
-sudo: true
+dist: xenial
+sudo: yes
 language: go
+services: docker
 
-stages:
-  - test
-  - name: build-push
-    if: (NOT type IN (pull_request)) AND (branch = master)
-  - name: manifest
-    if: (NOT type IN (pull_request)) AND (branch = master)
+env:
+  - DOCKER_CLI_EXPERIMENTAL=enabled
 
-cache:
-  directories:
-    - $GOPATH/pkg/dep
+before_install:
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
-before_script:
-  - IMAGE_TAG=${TRAVIS_BRANCH//\//-}
-
-jobs:
-  include:
-    - stage: test
-      env:
-      script:
-        - go get golang.org/x/lint/golint
-        - golint
-
-    - stage: build-push
-      env: ARCH=amd64
-      services: docker
-      script:
-        - go get -u github.com/gobuffalo/packr/v2/packr2
-        - docker run --rm --privileged multiarch/qemu-user-static:register
-        - env CGO_ENABLED=0 GOOS=linux GOARCH=${ARCH} packr2 build -o $TRAVIS_BUILD_DIR/bike-touring-tracker-${ARCH} cmd/server/main.go
-        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${IMAGE_TAG}-linux-${ARCH} .
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push $DOCKER_USERNAME/bike-touring-tracker:${IMAGE_TAG}-linux-${ARCH}
-
-    - stage: build-push
-      env: ARCH=arm64
-      services: docker
-      script:
-        - go get -u github.com/gobuffalo/packr/v2/packr2
-        - docker run --rm --privileged multiarch/qemu-user-static:register
-        - env CGO_ENABLED=0 GOOS=linux GOARCH=${ARCH} packr2 build -o $TRAVIS_BUILD_DIR/bike-touring-tracker-${ARCH} cmd/server/main.go
-        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${IMAGE_TAG}-linux-${ARCH} .
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push $DOCKER_USERNAME/bike-touring-tracker:${IMAGE_TAG}-linux-${ARCH}
-
-    - stage: build-push
-      env: ARCH=arm
-      services: docker
-      script:
-        - go get -u github.com/gobuffalo/packr/v2/packr2
-        - docker run --rm --privileged multiarch/qemu-user-static:register
-        - env CGO_ENABLED=0 GOOS=linux GOARCH=${ARCH} packr2 build -o $TRAVIS_BUILD_DIR/bike-touring-tracker-${ARCH} cmd/server/main.go
-        - docker build --build-arg ARCH=${ARCH} -t $DOCKER_USERNAME/bike-touring-tracker:${IMAGE_TAG}-linux-${ARCH} .
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push $DOCKER_USERNAME/bike-touring-tracker:${IMAGE_TAG}-linux-${ARCH}
-
-    - stage: manifest
-      env:
-      script:
-        - wget https://github.com/estesp/manifest-tool/releases/download/v0.9.0/manifest-tool-linux-amd64
-        - mv manifest-tool-linux-amd64 manifest-tool
-        - chmod +x manifest-tool
-        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - ./manifest-tool push from-args --platforms linux/amd64,linux/arm,linux/arm64
-          --template "phillebaba/bike-touring-tracker:${IMAGE_TAG}-OS-ARCH" --target "phillebaba/bike-touring-tracker:${IMAGE_TAG}"
+script:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - make push
